--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion/form-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion/form-contratacion.component.html
@@ -225,7 +225,7 @@
 
         <div class="text-center w-15">
           <button mat-raised-button color="accent" class="btn-table"
-            (click)="getDdp( sesionComiteId, dataContratacion.disponibilidadPresupuestal[0].numeroDdp )">
+            (click)="getDdp( dataContratacion.disponibilidadPresupuestal[0].disponibilidadPresupuestalId, dataContratacion.disponibilidadPresupuestal[0].numeroDdp )">
             Descargar DDP
           </button>
         </div>
