--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/crear-acta/crear-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/crear-acta/crear-acta.component.html
@@ -69,16 +69,20 @@
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [class.en-proceso]="!temasCompletos"
-                    [class.completo]="temasCompletos">
+                <mat-panel-title class="expansion-style--title" 
+                    [class.sin-diligenciar]="temasCompletos === null"
+                    [class.en-proceso]="temasCompletos === false"
+                    [class.completo]="temasCompletos === true">
                     Otros temas
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <mat-accordion *ngFor="let tema of listaTemas; let i = index">
                 <mat-expansion-panel class="expansion-style sub-expansion">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title" [class.sin-diligenciar]="tema.sesionTemaId == 0"
-                            [class.en-proceso]="!tema.registroCompleto" [class.completo]="tema.registroCompleto">
+                        <mat-panel-title class="expansion-style--title" 
+                            [class.sin-diligenciar]="tema.registroCompletoActa === undefined"
+                            [class.en-proceso]="tema.registroCompletoActa === false" 
+                            [class.completo]="tema.registroCompletoActa === true">
                             Tema {{ i + 1 }}
                         </mat-panel-title>
                     </mat-expansion-panel-header>
@@ -98,8 +102,10 @@
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [class.en-proceso]="!proposicionesCompletos"
-                    [class.completo]="proposicionesCompletos">
+                <mat-panel-title class="expansion-style--title" 
+                    [class.sin-diligenciar]="proposicionesCompletos === null"
+                    [class.en-proceso]="proposicionesCompletos === false"
+                    [class.completo]="proposicionesCompletos === true">
                     Proposiciones y varios
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -107,8 +113,10 @@
             <mat-accordion *ngFor="let tema of listaProposiciones; let i = index">
                 <mat-expansion-panel class="expansion-style sub-expansion">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title" [class.sin-diligenciar]="tema.sesionTemaId == 0"
-                            [class.en-proceso]="!tema.registroCompleto" [class.completo]="tema.registroCompleto">
+                        <mat-panel-title class="expansion-style--title" 
+                            [class.sin-diligenciar]="tema.registroCompletoActa === undefined "
+                            [class.en-proceso]="tema.registroCompletoActa === false" 
+                            [class.completo]="tema.registroCompletoActa === true">
                             Tema {{ i + 1 }}
                         </mat-panel-title>
                     </mat-expansion-panel-header>
