--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/tabla-controversias-racc/tabla-controversias-racc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/tabla-controversias-racc/tabla-controversias-racc.component.html
@@ -46,7 +46,7 @@
                     (click)="this.irActualizarTramite(element.actuacionID)">
                     Actualizar trámite
                 </button>
-                <button mat-raised-button color="accent" class="btn-table" (click)="descargarControversia(element.actuacionID)">
+                <button mat-raised-button color="accent" class="btn-table" (click)="descargarControversia(element.controversiaContractualId)">
                     Descargar controversia
                 </button>
             </td>
