--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/verdetalleedit-avance-actua-derivadas/verdetalleedit-avance-actua-derivadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/verdetalleedit-avance-actua-derivadas/verdetalleedit-avance-actua-derivadas.component.html
@@ -1,7 +1,6 @@
 <div class="container text-center">
     <div class="text-right">
-        <!-- valor 1 es quemado-->
-        <a routerLink="/registrarActuacionesControversiasContractuales/actualizarTramite/1" mat-button color="primary" class="btn-regresar">
+        <a routerLink="/registrarActuacionesControversiasContractuales/actualizarTramite/{{this.controversiaID}}" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
